Continue to Edit Health Information html page. Add class to Main.less file.
#7587 Create UI Interface used to display Patient Health Information

--- a/client/app/healthinformation/tmpl/healthinformation.tpl.html
+++ b/client/app/healthinformation/tmpl/healthinformation.tpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="row wrapper border-bottom white-bg page-heading">
         <div class="col-sm-10 ">
-            <h2>Health Information</h2>
+            <h1>Health Information</h1>
             <ol class="breadcrumb">
                 <li class="active">
                     <strong>Health Information</strong>
@@ -35,23 +35,28 @@
 <!-- NEW HEALTH INFO -->
 
         <div class="row">
-            <div class="col-sm-12" id="demographics">
+            <div class="col-sm-12 relative" id="demographics">
                 <div class="ibox panel panel-darkblue float-e-margins">
                     <div class="ibox-title  modified panel-heading">
-                        <h2>Inpatient Summary</h2><div class="inline m-b-none m-l-sm">Created on August 6, 2015 at Local Hospital</div>
-                        <div ibox-tools   total=""></div>
+                        <h2>Inpatient Summary<span class="m-b-none m-l-sm">Created on August 6, 2015 at Local Hospital</span></h2>
+                        <div class="chevron_absolute">
+                            <div ibox-tools class="white"  total=""></div>
+                        </div>
                     </div>
                     <div class="ibox-content modified">
                         <div class="row m-b">
                             <div class="col-sm-6">
                                 <div>
-                                    <label for="patientName">Provider2:</label> <span id="patientName">Dr. Henry Seven</span>
+                                    <label for="patientName">Provider:</label> <span id="patientName">Dr. Henry Seven</span>
                                 </div>
                                 <div>
                                     <label for="patientSSN">Treatment: </label> <span id="patientSSN">Pneumonia</span>
                                 </div>
                                 <div>
-                                    <label for="patientSex">Sex: </label> <span id="patientSex">Male</span>
+                                    <label for="startDate">Treatment Start Date: </label> <span id="startDate">2015-10-15</span>
+                                </div>
+                                <div>
+                                    <label for="endDate">Treatment Start Date: </label> <span id="endDate">2015-10-20</span>
                                 </div>
 
                             </div>
@@ -62,14 +67,14 @@
                                 <div class="ibox panel panel-default float-e-margins">
                                     <div class="ibox-title modified panel-heading">
                                         <h5>Hospital Discharge Instructions
-                                            <small class="m-l-sm">TAdditional Infromation</small>
+                                            <small class="m-l-sm">Additional Information</small>
                                         </h5>
                                         <div ibox-tools></div>
                                     </div>
                                     <div class="ibox-content">
-                                        <h2>
-                                            This is standard IN+ Panel<br/>
-                                        </h2>
+                                        <!--<h2>-->
+                                            <!--This is standard IN+ Panel<br/>-->
+                                        <!--</h2>-->
 
                                         <p>
                                             <strong>Lorem ipsum dolor</strong>
