Fix font weight and spacing on Health Information html page.
#7587 Create UI Interface used to display Patient Health Information

--- a/client/app/healthinformation/tmpl/healthinformation.tpl.html
+++ b/client/app/healthinformation/tmpl/healthinformation.tpl.html
@@ -37,10 +37,15 @@
         <div class="row">
             <div class="col-sm-12 relative" id="demographics">
                 <div class="ibox panel panel-darkblue float-e-margins">
-                    <div class="ibox-title  modified panel-heading">
-                        <h2>Inpatient Summary<span class="m-b-none m-l-sm">Created on August 6, 2015 at Local Hospital</span></h2>
+                    <div class="ibox-title  modified panel-heading right-padding30">
+                        <div class="row">
+                            <div class="col-sm-12 m-t-xs">
+                                <h3>Inpatient Summary<span class="m-b-none m-l-sm">Created on August 6, 2015 at Local Hospital</span></h3>
+                            </div>
+
                         <div class="chevron_absolute">
                             <div ibox-tools class="white"  total=""></div>
+                        </div>
                         </div>
                     </div>
                     <div class="ibox-content modified">
@@ -72,10 +77,6 @@
                                         <div ibox-tools></div>
                                     </div>
                                     <div class="ibox-content">
-                                        <!--<h2>-->
-                                            <!--This is standard IN+ Panel<br/>-->
-                                        <!--</h2>-->
-
                                         <p>
                                             <strong>Lorem ipsum dolor</strong>
                                             Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
