Separate the directives in the common module into directives in core and layout module. Seperate the directives in their own seperate files. Update the template with all the new directives prefix.
#7178 - Implement create consent UI

--- a/client/app/consent/controllers/consentCreateEdit.html
+++ b/client/app/consent/controllers/consentCreateEdit.html
@@ -1,9 +1,9 @@
 
-<content-wrapper title="Create Consent">
+<pp-content-wrapper title="Create Consent">
         <pp-consent-create
                 providers="consentCreateEditVm.providers"
                 purposeofuse="consentCreateEditVm.purposeOfUse"
                 medicalsections="consentCreateEditVm.medicalSections"
                 sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
                 consent="consentCreateEditVm.consent"></pp-consent-create>
-</content-wrapper>
+</pp-content-wrapper>
