--- a/client/app/consent/controllers/consentSign.html
+++ b/client/app/consent/controllers/consentSign.html
@@ -1,4 +1,4 @@
-<content-wrapper title="Sign Consent">
+<pp-content-wrapper title="Sign Consent">
 
     <div ng-bind-html="consentSignVm.javascriptCode | trustAsHTML" style="height: 600px"/>
 
@@ -10,6 +10,6 @@
     </div>
 
 
-</content-wrapper>
+</pp-content-wrapper>
 
 
