--- a/client/app/consent/controllers/consentSignRevoke.html
+++ b/client/app/consent/controllers/consentSignRevoke.html
@@ -1,4 +1,4 @@
-<content-wrapper title="Sign Revoke Consent">
+<pp-content-wrapper title="Sign Revoke Consent">
 
     <div ng-bind-html="consentSignRevokeVm.javascriptCode |trustAsHTML" style="height: 600px"/>
 
@@ -8,7 +8,7 @@
             <button type="button" class= "navbar-btn btn btn-primary pull-right" ng-click="consentSignRevokeVm.close()">Close</button>
         </div>
     </div>
-</content-wrapper>
+</pp-content-wrapper>
 
 
 
