--- a/client/app/healthinformation/tmpl/alerts.tpl.html
+++ b/client/app/healthinformation/tmpl/alerts.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title  modified panel-heading">
                 <h2>Alerts
                 </h2>
-                <div ibox-tools   total="{{alerts.length}}"></div>
+                <div pp-ibox-tools   total="{{alerts.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
