--- a/client/app/healthinformation/tmpl/demographics.tpl.html
+++ b/client/app/healthinformation/tmpl/demographics.tpl.html
@@ -3,7 +3,7 @@
         <div class="ibox panel panel-darkblue float-e-margins">
             <div class="ibox-title  modified panel-heading">
                 <h2>Demographics</h2>
-                <div ibox-tools   total=""></div>
+                <div pp-ibox-tools   total=""></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
