--- a/client/app/healthinformation/tmpl/healthinformation.tpl.html
+++ b/client/app/healthinformation/tmpl/healthinformation.tpl.html
@@ -11,7 +11,7 @@
 
 <div  class="row border-bottom row-padding-10" id="sticktoolbar" >
         <div class="col-xs-5 col-sm-6" >
-            <input icheck type="checkbox" ng-model="HealthInformationVm.toggleMenu" ng-checked="HealthInformationVm.toggleSectionWithoutData()"> Hide sections with no data.
+            <input pp-icheck type="checkbox" ng-model="HealthInformationVm.toggleMenu" ng-checked="HealthInformationVm.toggleSectionWithoutData()"> Hide sections with no data.
         </div>
 
         <div class="col-xs-7 col-sm-6">
