--- a/client/app/healthinformation/tmpl/immunizations.tpl.html
+++ b/client/app/healthinformation/tmpl/immunizations.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading ">
                 <h5>Immunizations
                 </h5>
-                <div ibox-tools  total="{{immunizations.length}}"></div>
+                <div pp-ibox-tools  total="{{immunizations.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
