--- a/client/app/healthinformation/tmpl/medications.tpl.html
+++ b/client/app/healthinformation/tmpl/medications.tpl.html
@@ -5,7 +5,7 @@
                 <h2>
                     Medications
                 </h2>
-                <div ibox-tools total="{{medications.length}}"></div>
+                <div pp-ibox-tools total="{{medications.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
