--- a/client/app/healthinformation/tmpl/problems.tpl.html
+++ b/client/app/healthinformation/tmpl/problems.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading ">
                 <h2>Problems
                 </h2>
-                <div ibox-tools  total="{{problems.length}}"></div>
+                <div pp-ibox-tools  total="{{problems.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
