--- a/client/app/healthinformation/tmpl/procedures.tpl.html
+++ b/client/app/healthinformation/tmpl/procedures.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading ">
                 <h2>Procedures
                 </h2>
-                <div ibox-tools  total="{{procedures.length}}"></div>
+                <div pp-ibox-tools  total="{{procedures.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
