--- a/client/app/home/home.tpl.html
+++ b/client/app/home/home.tpl.html
@@ -32,7 +32,7 @@
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading ibox-rounded">
                     <h3>General Health Information</h3>
-                    <div ibox-tools></div>
+                    <div pp-ibox-tools></div>
                     </div>
                 <div class="ibox-content">
                     <div class="feed-activity-list">
@@ -78,7 +78,7 @@
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading">
                     <h3>Prescription and Over-the-Counter Medications</h3>
-                    <div ibox-tools>
+                    <div pp-ibox-tools>
                     </div>
                 </div>
                 <div class="ibox-content">
@@ -106,7 +106,7 @@
             <div class="ibox float-e-margins margin-bottom-10">
                 <div class="ibox-title ibox-heading">
                     <h3>Mental Health and Substance Abuse</h3>
-                    <div ibox-tools>
+                    <div pp-ibox-tools>
                     </div>
                 </div>
 
