--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -1,4 +1,4 @@
-<content-wrapper title="List Providers">
+<pp-content-wrapper title="List Providers">
 
     <div class="row">
         <div class="col-sm-12">
@@ -17,7 +17,7 @@
                 <div class="ibox-title">
                     <h2>Current Healthcare Providers</h2>
 
-                    <div ibox-tools></div>
+                    <div pp-ibox-tools></div>
                 </div>
                 <div class="ibox-content">
 
@@ -65,4 +65,4 @@
         </div>
     </div>
 
-</content-wrapper>
+</pp-content-wrapper>
