--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -5,7 +5,7 @@
                 <div class="ibox-title  modified panel-heading">
                     <h2>Search</h2>
 
-                    <div ibox-tools></div>
+                    <div pp-ibox-tools></div>
                 </div>
                 <div class="ibox-content modified">
                     <form role="form" name="providerSearchForm">
