--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title page-title>Test Bed</title>
+    <title pp-page-title>Test Bed</title>
 
     <base href="/pp-ui/">
 
@@ -79,7 +79,6 @@
     <% }); %>
 
     <!-- angular -->
-<script src="common/directives/directives.js" type="text/javascript"></script>
 <script src="app/security/security.module.js" type="text/javascript"></script>
 <script src="app/security/services/authenticationInterceptor.service.js" type="text/javascript"></script>
 <script src="app/security/services/authentication.service.js" type="text/javascript"></script>
@@ -89,7 +88,11 @@
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
 <script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
-<script src="app/layout/app.layout.module.js" type="text/javascript"></script>
+<script src="app/layout/layout.module.js" type="text/javascript"></script>
+<script src="app/layout/directives/ppSideNavigation.directive.js" type="text/javascript"></script>
+<script src="app/layout/directives/ppPageTitle.directive.js" type="text/javascript"></script>
+<script src="app/layout/directives/ppMinimalizaSidebar.directive.js" type="text/javascript"></script>
+<script src="app/layout/directives/ppIboxTools.directive.js" type="text/javascript"></script>
 <script src="app/home/home.module.js" type="text/javascript"></script>
 <script src="app/home/home.config.js" type="text/javascript"></script>
 <script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
@@ -101,6 +104,9 @@
 <script src="app/core/filters/zip.filter.js" type="text/javascript"></script>
 <script src="app/core/filters/phone.filter.js" type="text/javascript"></script>
 <script src="app/core/filters/hasString.filter.js" type="text/javascript"></script>
+<script src="app/core/directives/ppIcheck.directive.js" type="text/javascript"></script>
+<script src="app/core/directives/ppDatepickerRange.directives.js" type="text/javascript"></script>
+<script src="app/core/directives/ppContentWrapper.directive.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
 <script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
