--- a/client/app/consent/controllers/consentList.html
+++ b/client/app/consent/controllers/consentList.html
@@ -1,3 +1,3 @@
-<content-wrapper title="List Consents">
+<pp-content-wrapper title="List Consents">
     <pp-consent-card-list consent-list="consentListVm.consentList"></pp-consent-card-list>
-</content-wrapper>
+</pp-content-wrapper>
