--- a/client/app/consent/controllers/consentRevoke.html
+++ b/client/app/consent/controllers/consentRevoke.html
@@ -1,3 +1,3 @@
-<content-wrapper title="Revoke Consent">
+<pp-content-wrapper title="Revoke Consent">
     <pp-consent-revoke></pp-consent-revoke>
-</content-wrapper>
+</pp-content-wrapper>
