--- a/client/app/consent/directives/consentPurposeOfUseModal.html
+++ b/client/app/consent/directives/consentPurposeOfUseModal.html
@@ -12,7 +12,7 @@
                     <div >
                         <div class="radio">
                             <label>
-                                <input type="checkbox" icheck  checklist-model="consent.selectedPurposeOfUseCodes" checklist-value="purposeOfUse.code"  >
+                                <input type="checkbox" pp-icheck  checklist-model="consent.selectedPurposeOfUseCodes" checklist-value="purposeOfUse.code"  >
                                 <span class="m-l-xs" ng-bind="purposeOfUse.displayName"></span>
                             </label>
                         </div>
