--- a/client/app/healthinformation/tmpl/planofcares.tpl.html
+++ b/client/app/healthinformation/tmpl/planofcares.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading ">
                 <h5>Plans of Care
                 </h5>
-                <div ibox-tools  total="{{planofcares.length}}"></div>
+                <div pp-ibox-tools  total="{{planofcares.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
