--- a/client/app/healthinformation/tmpl/results.tpl.html
+++ b/client/app/healthinformation/tmpl/results.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading">
                 <h2>Results
                 </h2>
-                <div ibox-tools  total="{{results.length}}"></div>
+                <div pp-ibox-tools  total="{{results.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
