--- a/client/app/healthinformation/tmpl/vitalsigns.tpl.html
+++ b/client/app/healthinformation/tmpl/vitalsigns.tpl.html
@@ -4,7 +4,7 @@
             <div class="ibox-title modified panel-heading ">
                 <h2>Vital Signs
                 </h2>
-                <div ibox-tools  total="{{vitalsigns.length}}"></div>
+                <div pp-ibox-tools  total="{{vitalsigns.length}}"></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
