--- a/client/app/provider/tmpl/provider-lookup.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup.tpl.html
@@ -1,3 +1,3 @@
-<content-wrapper title="Search Providers">
+<pp-content-wrapper title="Search Providers">
     <provider-lookup-search></provider-lookup-search>
-</content-wrapper>
+</pp-content-wrapper>
