--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label for="file">Medical Document</label>
                         <input type="file" name="file" id="file"
-                               file-model="medicalFile" required/>
+                               file-model="MedicalDocumentsUploadVm.medicalFile"/>
                     </div>
 
                     <button class="btn btn-primary dark-green" type="button"
