--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUploadedDocuments.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUploadedDocuments.tpl.html
@@ -5,7 +5,7 @@
                 <h2 class="custom-no-margin-top"><i class="fa fa-files-o"></i> Uploaded Documents</h2>
             </div>
             <div class="panel-body">
-                <table class="table table-bordered table-striped table-hover">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th>Name</th>
@@ -16,29 +16,28 @@
                     </thead>
 
                     <tbody>
-                    <tr>
+                    <tr ng-if="uploadedDocumentVm.medicaldocumentslist.length === 0">
+                        <td colspan="5" class="text-center"> No Medical Documents has been added.</td>
+                    </tr>
+                    <tr ng-repeat="medicalDocument in uploadedDocumentVm.medicaldocumentslist">
                         <td>
-                            <span>Name</span>
+                            <span ng-bind="medicalDocument.name"></span>
                         </td>
                         <td>
-                            <span>Type</span>
+                            <span>Episode Summary Note</span>
                         </td>
                         <td>
-                            <span>Description</span>
+                            <span ng-bind="medicalDocument.description"></span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-success btn-xs">
+                            <button type="button" class="btn btn-success btn-xs"
+                                    ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
                                 <span class="fa fa-download"></span> Download
                             </button>
-                            <button type="button" class="btn btn-danger btn-xs">
+                            <button type="button" class="btn btn-danger btn-xs"
+                                    ng-click="uploadedDocumentVm.openDeleteMedicalDocumentModal(medicalDocument, 'sm')">
                                 <span class="fa fa-times"></span> Remove
                             </button>
-                            <!--<a>
-                                <i class="fa fa-download"></i>
-                            </a>
-                            <a>
-                                <i class="fa fa-times"></i>
-                            </a>-->
                         </td>
                     </tr>
                     </tbody>
